@@ -1,3 +1,7 @@
+2013-10-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* expander.man: Ticket [e65df22e92]. Fixed typos.
+
 2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
