@@ -1,3 +1,10 @@
+2013-10-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* iban.tcl: Ticket [a3dd326ec8]: Applied patch by Max
+	* iban.test: Jarek to update the code to the IBAN Registry
+	* iban.man: version 46. Bumped package version to 1.3.
+	* pkgIndex.tcl:
+
 2013-02-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* cc_amex.man: Fixed type markers so that dtplite
